# CombinatorialMathematics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: CalLessNum.h  Fraction.cpp  Fraction.h
week01/: DictionaryOrderMethod.cpp  DictionaryOrderMethod.h  GeneratePermutation.h  OrdinalNumberMethod.cpp  OrdinalNumberMethod.h  TranspositionMethod.cpp  TranspositionMethod.h
